## Process this file with automake to produce Makefile.in

AUTOMAKE_OPTIONS=foreign no-dependencies 1.11

SUBDIRS = src

# INCLUDES = @INCLUDES@

EXTRA_DIST = scripts make_token_names.sh \
	win32 make_win32.sh

check-local:

DISTCLEANFILES =
CLEANFILES =
MAINTAINERCLEANFILES = aclocal.m4 Makefile.in
